--- a/content/css/app.css
+++ b/content/css/app.css
@@ -16,7 +16,7 @@ body {
 main {
     width: 100%;
     margin: 0 0 2rem 0;
-    padding: 0;}
+    padding: 2rem 0 0 0;}
 
 article {
     width: 80%;
